@@ -449,7 +449,7 @@ Do a similarity search
 Try a search with various weight cutoff restrictions:
 >>> results = sconn.search(sconn.query_parse('richard OR 7 OR 7 OR 8'), 0, 5, sortby="date")
 >>> [(result.id, result.percent, int(result.weight * 10)) for result in results]
-[('7', 55, 326), ('8', 27, 163)]
+[('7', 55, 326), ('8', 28, 163)]
 >>> results = sconn.search(sconn.query_parse('richard OR 7 OR 7 OR 8'), 0, 5, sortby="date", percentcutoff=30)
 >>> [(result.id, result.percent, int(result.weight * 10)) for result in results]
 [('7', 55, 326)]
